testament/tests/shouldfail/tnimout.nim
discard """
  nimout: "Hello World!"
  action: compile
"""

static:
  echo "something else"
